# motor_game_system

./: CMakeLists.txt  README.md  main.cc  main.cpp  vcpkg.json
api/: CMakeLists.txt
api/include/: Circle.h  Rectangle.h  Renderer.h  Window.h  circle.h  custom_allocator.h  game_engine.h  planet.h  rectangle.h  renderer.h  window.h
api/include/Done/: aabb.h  intersection_manager.h  physical_circle.h  physical_polygon.h  physical_shape.h
api/include/Graphic/: drawable_circle.h  drawable_polygon.h  drawable_shape.h
api/include/Physic/: aabb.h  circle.h  contact_listener.h  math_for_circles.h  polygon.h  shape.h  trigger.h
api/include/Sample_file/: game_engine.h  physical_collision_manager.h  planet_sample_manager.h  trigger_sample_manager.h
api/include/physic/: aabb.h  collider.h  contact_listener.h  delta_for_collisions.h  intersection_manager.h  physical_circle.h  physical_polygon.h  physical_shape.h  quadtree.h
api/samples/collision/: collision_sample.cc
api/samples/planet/: planet_sample.cc  planet_sample.h
api/samples/trigger/: trigger_sample.cc  trigger_sample.h
api/src/: Circle.cpp  Rectangle.cpp  Renderer.cpp  Windows.cpp  circle.cc  game_engine.cc  planet.cc  rectangle.cc  renderer.cc  windows.cc
api/src/Done/: aabb.cc  physical_circle.cc  physical_polygon.cc
api/src/Graphic/: drawable_circle.cc  drawable_polygon.cc  drawable_shape.cc
api/src/Physic/: aabb.cc  circle.cc  collider.cc  contact_listener.cc  math_for_circles.cc  physical_circle.cc  physical_polygon.cc  polygon.cc  quadtree.cc  shape.cc  trigger.cc
api/src/Sample_file/: game_engine.cc  physical_collision_manager.cc  planet_sample_manager.cc  trigger_sample_manager.cc
api/test/: test_aabb.cc  test_collision_trigger.cc  test_contact_listener.cc  test_math_circle.cc
core/: CMakeLists.txt
core/include/: Matrix2.h  Matrix3.h  Matrix4.h  Vec2.h  Vec3.h  Vec4.h  common.h  for_vec2.h  four_vec2.h  four_vec_3.h  matrix2.h  matrix3.h  matrix4.h  quaternion.h  vec2.h  vec3.h  vec4.h
core/src/: four_vec2.cc  four_vec_3.cc
core/test/: Test_matrix2.cpp  Test_matrix3.cpp  Test_matrix4.cpp  Test_vec2f.cpp  Test_vec3f.cpp  Test_vec4f.cpp  test_common.cc  test_four_vec_2.cc  test_four_vec_3.cc  test_matrix2.cc  test_matrix3.cc  test_matrix4.cc  test_quaternion.cc  test_vec2f.cc  test_vec3f.cc  test_vec4f.cc
